--- a/StocksWithFriends/StocksWithFriends/Views/Shared/_LogOnPartial.cshtml
+++ b/StocksWithFriends/StocksWithFriends/Views/Shared/_LogOnPartial.cshtml
@@ -3,5 +3,5 @@
     [ @Html.ActionLink("Log Off", "LogOff", "Account") ]</text>
 }
 else {
-    @:[ @Html.ActionLink("Log On", "LogOn", "Account") ]
+    @:[ @Html.ActionLink("Login with Facebook", "FacebookLogin", "Account") ]
 }
