--- a/StocksWithFriends/StocksWithFriends/Views/Shared/_LogOnPartial.cshtml
+++ b/StocksWithFriends/StocksWithFriends/Views/Shared/_LogOnPartial.cshtml
@@ -3,5 +3,40 @@
     [ @Html.ActionLink("Log Off", "LogOff", "Account") ]</text>
 }
 else {
-    @:[ @Html.ActionLink("Login with Facebook", "FacebookLogin", "Account") ]
+    <fb:login-button perms="publish_stream,read_stream" onlogin="afterFacebookConnect();" 
+       autologoutlink="false"></fb:login-button>
+    <div id="fb-root" style="display:inline; margin-left:20px;"></div>
 }
+
+<script language="javascript" type="text/javascript">
+    window.fbAsyncInit = function() {
+        FB.init({
+            appId: '503245086402321',
+            status: true,
+            cookie: false,
+            xfbml: true
+        });
+    }
+
+    function afterFacebookConnect() {
+        FB.getLoginStatus(function(response) {
+            console.log(response.authResponse);
+            if (response.authResponse) {
+                window.location = "../Account/FacebookLogin?token=" + 
+                       response.authResponse.accessToken;
+            } else {
+
+            }
+        });
+    };
+
+    $(document).ready(function() {
+        if (document.getElementById('fb-root') != undefined) {
+            var scriptElement = document.createElement('script');
+            scriptElement.type = 'text/javascript';
+            scriptElement.src = '//connect.facebook.net/en_US/all.js';
+            scriptElement.async = true;
+            document.getElementById('fb-root').appendChild(scriptElement);
+        }
+    });
+</script>
