Adds skeleton for Facebook photo upload.

--- a/StocksWithFriends/StocksWithFriends/Views/Facebook/Home.cshtml
+++ b/StocksWithFriends/StocksWithFriends/Views/Facebook/Home.cshtml
@@ -1,4 +1,4 @@
 ﻿@if(Request.IsAuthenticated) {
-    <text>FACEBOOK HUEHUEHUEHUEHUE</text><br />
+    Html.RenderAction("UploadPhoto", "Facebook");
     Html.RenderAction("UpdateStatus", "Facebook");
 }
