Adds upload photo to Facebook feature.  Does not yet support adding a message to a post.  Only supports PNG images - does not yet auto detect file type.  Requires Facebook .NET package (through Nuget).  Includes uploadify in Resources folder.

--- a/StocksWithFriends/StocksWithFriends/Views/Shared/_LogOnPartial.cshtml
+++ b/StocksWithFriends/StocksWithFriends/Views/Shared/_LogOnPartial.cshtml
@@ -1,11 +1,13 @@
-﻿@if(Request.IsAuthenticated) {
+﻿<div id="fb-root" style="display:inline; margin-left:20px;"></div>
+<input type="text" id="access-token-input" value="@Session["accessToken"]" style="display:none;" />
+
+@if(Request.IsAuthenticated) {
     <text>Welcome <strong>@User.Identity.Name</strong>!
     [ @Html.ActionLink("Log Off", "LogOff", "Account") ]</text>
 }
 else {
-    <fb:login-button perms="publish_stream,read_stream" onlogin="afterFacebookConnect();" 
+    <fb:login-button perms="publish_stream,read_stream" onlogin="afterFacebookConnect();" id="facebook-login-button"
        autologoutlink="false"></fb:login-button>
-    <div id="fb-root" style="display:inline; margin-left:20px;"></div>
 }
 
 <script language="javascript" type="text/javascript">
@@ -16,6 +18,13 @@ else {
             cookie: false,
             xfbml: true
         });
+
+        // Get new access token if the user is already authenticated through Facebook.
+        if (document.getElementById('access-token-input').value === "") {
+            if (document.getElementById('facebook-login-button') === null) {
+                afterFacebookConnect();
+            }
+        }
     }
 
     function afterFacebookConnect() {
