--- a/StocksWithFriends/StocksWithFriends/Content/Site.css
+++ b/StocksWithFriends/StocksWithFriends/Content/Site.css
@@ -89,16 +89,16 @@ header, #header {
     padding: 0;
 }
 
-header h1, #header h1 {
-    font-weight: bold;
-    padding: 5px 0;
-    margin: 0;
-    color: #fff;
-    border: none;
-    line-height: 2em;
-    font-size: 32px !important;
-    text-shadow: 1px 1px 2px #111;
-}
+    header h1, #header h1 {
+        font-weight: bold;
+        padding: 5px 0;
+        margin: 0;
+        color: #fff;
+        border: none;
+        line-height: 2em;
+        font-size: 32px !important;
+        text-shadow: 1px 1px 2px #111;
+    }
 
 #main {
     padding: 30px 30px 15px 30px;
@@ -108,7 +108,7 @@ header h1, #header h1 {
     border-radius: 4px 0 0 0;
 }
 
-footer, 
+footer,
 #footer {
     background-color: #fff;
     color: #999;
@@ -132,45 +132,45 @@ ul#menu {
     text-align: right;
 }
 
-ul#menu li {
-    display: inline;
-    list-style: none;
-}
+    ul#menu li {
+        display: inline;
+        list-style: none;
+    }
 
-ul#menu li#greeting {
-    padding: 10px 20px;
-    font-weight: bold;
-    text-decoration: none;
-    line-height: 2.8em;
-    color: #fff;
-}
+        ul#menu li#greeting {
+            padding: 10px 20px;
+            font-weight: bold;
+            text-decoration: none;
+            line-height: 2.8em;
+            color: #fff;
+        }
 
-ul#menu li a {
-    padding: 10px 20px;
-    font-weight: bold;
-    text-decoration: none;
-    line-height: 2.8em;
-    background-color: #e8eef4;
-    color: #034af3;
-    -webkit-border-radius: 4px 4px 0 0;
-    -moz-border-radius: 4px 4px 0 0;
-    border-radius: 4px 4px 0 0;
-}
+        ul#menu li a {
+            padding: 10px 20px;
+            font-weight: bold;
+            text-decoration: none;
+            line-height: 2.8em;
+            background-color: #e8eef4;
+            color: #034af3;
+            -webkit-border-radius: 4px 4px 0 0;
+            -moz-border-radius: 4px 4px 0 0;
+            border-radius: 4px 4px 0 0;
+        }
 
-ul#menu li a:hover {
-    background-color: #fff;
-    text-decoration: none;
-}
+            ul#menu li a:hover {
+                background-color: #fff;
+                text-decoration: none;
+            }
 
-ul#menu li a:active {
-    background-color: #a6e2a6;
-    text-decoration: none;
-}
+            ul#menu li a:active {
+                background-color: #a6e2a6;
+                text-decoration: none;
+            }
 
-ul#menu li.selected a {
-    background-color: #fff;
-    color: #000;
-}
+        ul#menu li.selected a {
+            background-color: #fff;
+            color: #000;
+        }
 
 /* FORM LAYOUT ELEMENTS   
 ----------------------------------------------------------*/
@@ -190,7 +190,7 @@ textarea {
     min-height: 75px;
 }
 
-input[type="text"], 
+input[type="text"],
 input[type="password"] {
     border: 1px solid #ccc;
     padding: 2px;
@@ -219,17 +219,17 @@ table {
     border-collapse: collapse;
 }
 
-table td {
-    padding: 5px;
-    border: solid 1px #e8eef4;
-}
+    table td {
+        padding: 5px;
+        border: solid 1px #e8eef4;
+    }
 
-table th {
-    padding: 6px 5px;
-    text-align: left;
-    background-color: #e8eef4;
-    border: solid 1px #e8eef4;
-}
+    table th {
+        padding: 6px 5px;
+        text-align: left;
+        background-color: #e8eef4;
+        border: solid 1px #e8eef4;
+    }
 
 /* MISC  
 ----------------------------------------------------------*/
@@ -241,7 +241,7 @@ table th {
     color: Red;
 }
 
-nav, 
+nav,
 #menucontainer {
     margin-top: 40px;
 }
@@ -260,20 +260,20 @@ div#title {
     color: White;
 }
 
-#logindisplay a:link {
-    color: white;
-    text-decoration: underline;
-}
+    #logindisplay a:link {
+        color: white;
+        text-decoration: underline;
+    }
 
-#logindisplay a:visited {
-    color: white;
-    text-decoration: underline;
-}
+    #logindisplay a:visited {
+        color: white;
+        text-decoration: underline;
+    }
 
-#logindisplay a:hover {
-    color: white;
-    text-decoration: none;
-}
+    #logindisplay a:hover {
+        color: white;
+        text-decoration: none;
+    }
 
 /* Styles for validation helpers
 -----------------------------------------------------------*/
@@ -301,12 +301,12 @@ div#title {
 
 /* Styles for editor and display helpers
 ----------------------------------------------------------*/
-.display-label, 
+.display-label,
 .editor-label {
     margin: 1em 0 0 0;
 }
 
-.display-field, 
+.display-field,
 .editor-field {
     margin: 0.5em 0 0 0;
 }
@@ -315,10 +315,33 @@ div#title {
     width: 30em;
 }
 
-.text-box.multi-line {
-    height: 6.5em;
-}
+    .text-box.multi-line {
+        height: 6.5em;
+    }
 
 .tri-state {
     width: 6em;
+}
+
+/* Stock and ticker styles */
+#ticker_row td {
+    border: none !important;
+}
+
+#ticker_table {
+    border: none;
+}
+
+.ticker_cell {
+    border: 1px solid #99CC99;
+    border-radius: 20px;
+    padding: 3px 6px;
+    background-color: #E6FFE6;
+}
+.stock_symbol {
+    color: #666666;
+}
+
+.stock_price {
+    color: #008800;
 }
