did a bunch of stuff

--- a/StocksWithFriends/StocksWithFriends/Views/Facebook/UpdateStatus.cshtml
+++ b/StocksWithFriends/StocksWithFriends/Views/Facebook/UpdateStatus.cshtml
@@ -17,5 +17,8 @@
     }
 </script>
 
+<div class="ui-widget">
+    <label for="status-input">Update Status</label>
 <input type="text" id="status-input" />
 <button onclick="postStatus()">Post</button>
+</div>
