--- a/StocksWithFriends/StocksWithFriends/Views/Facebook/UploadPhoto.cshtml
+++ b/StocksWithFriends/StocksWithFriends/Views/Facebook/UploadPhoto.cshtml
@@ -12,4 +12,4 @@ $(function() {
 });
 </script>
 
-<input type="file" name="file_upload" id="file_upload" />
+<input type="file" name="file_upload" id="file_upload" class="uploadify"/>
