--- a/StocksWithFriends/StocksWithFriends/Views/Facebook/Home.cshtml
+++ b/StocksWithFriends/StocksWithFriends/Views/Facebook/Home.cshtml
@@ -1,4 +1,6 @@
 ﻿@if(Request.IsAuthenticated) {
-    Html.RenderAction("UploadPhoto", "Facebook");
     Html.RenderAction("UpdateStatus", "Facebook");
+    Html.RenderAction("UploadPhoto", "Facebook");
+    Html.RenderAction("PostToFriendsWall", "Facebook");
+
 }
