--- a/StocksWithFriends/StocksWithFriends/Views/Facebook/UpdateStatus.cshtml
+++ b/StocksWithFriends/StocksWithFriends/Views/Facebook/UpdateStatus.cshtml
@@ -17,8 +17,6 @@
     }
 </script>
 
-<div class="ui-widget">
-    <label for="status-input">Update Status</label>
-<input type="text" id="status-input" />
-<button onclick="postStatus()">Post</button>
-</div>
+<label for="status-input" class="fb-label">Update Status</label>
+<input id="status-input" class="fb-input-text" />
+<button onclick="postStatus()" class="fb-button">Post</button>
