--- a/StocksWithFriends/StocksWithFriends/Views/Shared/_Layout.cshtml
+++ b/StocksWithFriends/StocksWithFriends/Views/Shared/_Layout.cshtml
@@ -4,12 +4,13 @@
     <title>@ViewBag.Title</title>
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
     <script src="@Url.Content("~/Scripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
+    <link href='http://fonts.googleapis.com/css?family=Sintony:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
     <div class="page">
         <div id="header">
             <div id="title">
-                <h1>Stocks with Friends</h1>
+                <img src="../../Resources/images/logo.png" id="logo" />
             </div>
             <div id="logindisplay">
                 @Html.Partial("_LogOnPartial")
