--- a/StocksWithFriends/StocksWithFriends/Views/Shared/_Layout.cshtml
+++ b/StocksWithFriends/StocksWithFriends/Views/Shared/_Layout.cshtml
@@ -18,8 +18,8 @@
             <div id="menucontainer">
                 <ul id="menu">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Stocks","Index","Stock")</li>
+                    <li>@Html.ActionLink("Calendar","Index","Calender")</li>
                 </ul>
             </div>
         </div>
