Adding news feed

--- a/StocksWithFriends/StocksWithFriends/Views/Home/Index.cshtml
+++ b/StocksWithFriends/StocksWithFriends/Views/Home/Index.cshtml
@@ -6,5 +6,6 @@
 <p>
     @{ Html.RenderAction("Home", "Facebook"); }
 </p>
+    @{ Html.RenderAction("NewsFeed","Facebook");}
 
 @{ Html.RenderAction("Ticker", "Stock"); }
