--- a/StocksWithFriends/StocksWithFriends/Views/Stock/Ticker.cshtml
+++ b/StocksWithFriends/StocksWithFriends/Views/Stock/Ticker.cshtml
@@ -18,7 +18,7 @@
                     if (data.Item1) {
                         console.log("adding row");
                         var i = $('#ticker_row > td').length;
-                        $('#ticker_row > td').eq(i - 2).after('<td><span class="ticker_cell"><span class="stock_symbol">' + data.Item2.symbol + '</span>: <span class="stock_price">' + data.Item2.price + '</span></span></td>');
+                        $('#ticker_row > td').eq(i - 2).after('<td><span class="ticker_cell_' + data.Item2.trend + '"><span class="stock_symbol"><a href="/Stock/Lookup?symbol=' + data.Item2.symbol + '">' + data.Item2.symbol + '</a></span>: <span class="stock_price">' + data.Item2.price + '</span></span></td>');
                     }
                     else { console.log("invalid symbol"); }
                 });
@@ -34,8 +34,16 @@
                 @foreach (StocksWithFriends.Controllers.Stock s in ViewBag.stocks)
                 {
                     <td>
-                        <span class="ticker_cell">
-                            <span class="stock_symbol">@s.symbol</span>: $<span class="stock_price">@s.price</span>
+                        <span class="ticker_cell_@(s.trend)">
+                            <span class="stock_symbol">
+                                @Html.ActionLink(
+                                    s.symbol,
+                                    "LookUp",
+                                    "Stock",
+                                    new { symbol = s.symbol },
+                                    null
+                                )
+                            </span>: $<span class="stock_price">@s.price</span>
                         </span>
                     </td>
                 }
