--- a/StocksWithFriends/StocksWithFriends/Views/Shared/_Layout.cshtml
+++ b/StocksWithFriends/StocksWithFriends/Views/Shared/_Layout.cshtml
@@ -20,6 +20,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Stocks","Index","Stock")</li>
                     <li>@Html.ActionLink("Calendar","Index","Calender")</li>
+                    <li>@Html.ActionLink("Add A Friend","FriendRequest","Facebook")</li>
                 </ul>
             </div>
         </div>
