--- a/StocksWithFriends/StocksWithFriends/Views/Shared/_LogOnPartial.cshtml
+++ b/StocksWithFriends/StocksWithFriends/Views/Shared/_LogOnPartial.cshtml
@@ -13,7 +13,7 @@ else {
 <script language="javascript" type="text/javascript">
     window.fbAsyncInit = function() {
         FB.init({
-            appId: '503245086402321',
+            appId: '@Session["appID"]',
             status: true,
             cookie: false,
             xfbml: true
