--- a/StocksWithFriends/StocksWithFriends/Views/Shared/_Layout.cshtml
+++ b/StocksWithFriends/StocksWithFriends/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <div class="page">
         <div id="header">
             <div id="title">
-                <img src="../../Resources/images/logo.png" id="logo" />
+                <img src="/../../Resources/images/logo.png" id="logo" />
             </div>
             <div id="logindisplay">
                 @Html.Partial("_LogOnPartial")
@@ -20,6 +20,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Stocks","Index","Stock")</li>
                     <li>@Html.ActionLink("Calendar","Index","Calender")</li>
+                    <li>@Html.ActionLink("Add a Friend","FriendRequest","Facebook")</li>
                 </ul>
             </div>
         </div>
