--- a/StocksWithFriends/StocksWithFriends/Views/Shared/_Layout.cshtml
+++ b/StocksWithFriends/StocksWithFriends/Views/Shared/_Layout.cshtml
@@ -4,15 +4,13 @@
     <title>@ViewBag.Title</title>
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
     <script src="@Url.Content("~/Scripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
+     <link href='http://fonts.googleapis.com/css?family=Sintony:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
     <div class="page">
         <div id="header">
             <div id="title">
                 <img src="/../../Resources/images/logo.png" id="logo" />
-            </div>
-            <div id="logindisplay">
-                @Html.Partial("_LogOnPartial")
             </div>
             <div id="menucontainer">
                 <ul id="menu">
@@ -21,6 +19,9 @@
                     <li>@Html.ActionLink("Calendar","Index","Calender")</li>
                     <li>@Html.ActionLink("Add a Friend","FriendRequest","Facebook")</li>
                 </ul>
+            </div>
+            <div id="logindisplay">
+                @Html.Partial("_LogOnPartial")
             </div>
         </div>
         <div id="main">
