--- a/StocksWithFriends/StocksWithFriends/Views/Calender/Index.cshtml
+++ b/StocksWithFriends/StocksWithFriends/Views/Calender/Index.cshtml
@@ -3,37 +3,94 @@
 }
 <link rel='stylesheet' type='text/css' href="../../Content/fullcalendar.css" />
 <script type='text/javascript' src="../../Scripts/fullcalendar.js"></script>
+<style type="text/css">
+    #add-event-form {
+        display: none;
+    }
+</style>
 
 <header>
     <script>
-    $(document).ready(function() {
+        $(document).ready(function() {
 
-    // page is now ready, initialize the calendar...
-        
-        $('#calendar').fullCalendar({
-            events: [
-                {
-                    title: 'event1',
-                    start: '2013-04-09'
+            // page is now ready, initialize the calendar...
+
+            $.ajax({
+                url: 'Calender/GetEvents',
+                success: function (data) {
+                    var events = [];
+
+                    for (var i = 0; i < data.length; i++) {
+                        events.push({
+                            title: data[i].Title,
+                            start: data[i].Start,
+                            end: data[i].End,
+                            allDay: data[i].AllDay
+                        });
+                    }
+
+                    initCalendar(events);
                 },
-                {
-                    title: 'event2',
-                    start: '2013-04-09',
-                    end: '2014-01-07'
-                },
-                {
-                    title: 'event3',
-                    start: '2010-01-09 12:30:00',
-                    allDay: false // will make the time show
+                error: function () {
+
                 }
-            ],
-            dayClick: function (date, allDay, jsEvent, view) {
+            });
 
-
-            }
+            document.getElementById("button-save").onclick = function () {
+                console.log($("#calendar").fullCalendar("clientEvents"));
+            };
         });
+        
+        function initCalendar(events) {
+            $('#calendar').fullCalendar({
+                events: events,
+                dayClick: function (date, allDay, jsEvent, view) {
+                    $("#add-event-form").dialog({
+                        height: 300,
+                        width: 350,
+                        modal: true,
+                        buttons: {
+                            "Create Event": function () {
+                                var title = document.getElementById('add-event-name').value;
 
-    });
-        </script>
+                                $('#calendar').fullCalendar('renderEvent', {
+                                    title: title,
+                                    start: date
+                                });
+
+                                $(this).dialog('close');
+                                document.getElementById('add-event-name').value = "";
+
+                                $.ajax({
+                                    url: 'Calender/AddEvent',
+                                    data: {
+                                        title: title,
+                                        startDate: date
+                                    },
+                                    success: function () {
+
+                                    },
+                                    error: function () {
+
+                                    }
+                                });
+                            },
+                            "Cancel": function () {
+                                $(this).dialog("close");
+                            }
+                        }
+                    });
+                }
+            });
+        }
+    </script>
 </header>
 <div id='calendar'></div>
+<div id="add-event-form">
+    <form>
+        <fieldset>
+            <input type="text" name="name" id="add-event-name" placeholder="Event Name" class="text ui-widget-content ui-corner-all" />
+        </fieldset>
+    </form>
+</div>
+<button id="button-save">Save</button>
