--- a/StocksWithFriends/StocksWithFriends/Views/Shared/_Layout.cshtml
+++ b/StocksWithFriends/StocksWithFriends/Views/Shared/_Layout.cshtml
@@ -3,7 +3,9 @@
 <head>
     <title>@ViewBag.Title</title>
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" />
     <script src="@Url.Content("~/Scripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
+    <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
      <link href='http://fonts.googleapis.com/css?family=Sintony:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
