more fixes to get chat functionality working

--- a/StocksWithFriends/StocksWithFriends/Views/Chat/Chat.cshtml
+++ b/StocksWithFriends/StocksWithFriends/Views/Chat/Chat.cshtml
@@ -29,6 +29,7 @@
 
         $.ajax({
             url: '/Chat/GetChatHistory',
+            data: {userName: fbName},
             success: function (data) {
                 alert("success");
                 var logItem = [];
